<resources>

    <string name="app_ad_id" translatable="false">ca-app-pub-1871591024314273~5703632445</string>

    <string name="banner_ad_id" translatable="false">ca-app-pub-1871591024314273/7745426135</string>
    <string name="banner_test_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>


    <string name="app_name">우리! 체육관</string>
    <!-- Strings related to login -->
    <string name="prompt_id" translatable="false">ID</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="action_sign_in">로그인</string>
    <string name="add_member">회원추가</string>
    <string name="update_member">회원수정</string>
    <string name="save_login_information">로그인 정보 저장</string>
    <string name="auto_login">자동 로그인</string>
    <string name="welcome">환영합니다!</string>
    <string name="invalid_username">사용자명이 유효하지 않습니다.</string>
    <string name="invalid_password">비밀번호는 6글자 이상이어야합니다.</string>
    <string name="login_failed">로그인 실패</string>
    <string name="auto_login_boolean" translatable="false">AutoLoginBoolean</string>
    <string name="auto_login_id" translatable="false">AutoLoginID</string>
    <string name="auto_login_password" translatable="false">AutoLoginPassword</string>
    <string name="login_id">LoginID</string>
    <string name="login_password">LoginPassword</string>
    <string name="login_name">LoginName</string>
    <string name="hello_android">안드로이드 안녕</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="kakao_login">카카오톡 로그인</string>
    <string name="forgot_password">아이디, 비밀번호를 잊어버리셨나요?</string>
    <string name="manage_consumer">회원관리</string>
    <string name="members">회원 목록</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="address">주소</string>
    <string name="remark">비고</string>
    <string name="regist_month">등록 개월수</string>
    <string name="sign_up_date">가입일</string>
    <string name="please_backpress_again">뒤로 버튼을 다시 한번 누르면 종료됩니다.</string>
    <string name="delete_member">회원삭제</string>
    <string name="warning">주의!</string>
    <string name="menu_manage_member">회원관리</string>
    <string name="menu_manage_cost">비용관리</string>
    <string name="menu_setting">설정</string>
    <string name="alert">알림</string>
    <string name="cost">비용</string>
    <string name="add">추가</string>
    <string name="month">개월</string>

    <!--    광고 id 실제값 : ca-app-pub-1871591024314273~5703632445-->
    <!--    광고 id 테스트용 : ca-app-pub-3940256099942544/6300978111-->
</resources>