<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="65dp"
        android:text="@string/add_member"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView_title">

        <ScrollView
            android:id="@+id/scrollView_signUpInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView_title">

                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_name"
                    app:textView_title="@string/name"
                    app:editText_content_hint="@string/name"/>

                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_email"
                    app:textView_title="@string/email"
                    app:editText_content_hint="@string/email"/>

                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_sign_up_date"
                    app:textView_title="@string/sign_up_date"
                    app:editText_content_hint="@string/sign_up_date"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/linearlayout_height">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/s_core_dream4"
                        android:text="@string/regist_month" />

                    <TextView
                        android:id="@+id/textView_select_regist_month"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/s_core_dream4"
                        tools:text="0" />


                    <Button
                        android:id="@+id/button_regist_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customlayout_button_main"
                        android:text="@string/regist_month"
                        android:fontFamily="@font/s_core_dream4"
                        android:layout_marginStart="10sp"
                        android:textColor="@color/white" />

                </LinearLayout>

                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_phone_number"
                    app:editText_input_number="true"
                    app:textView_title="@string/phone_number"
                    app:editText_content_hint="@string/phone_number"/>

                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_address"
                    app:textView_title="@string/address"
                    app:editText_content_hint="@string/address"/>

                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_remark"
                    app:textView_title="@string/remark"
                    app:editText_content_hint="@string/remark"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="200dp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/join_pwck">

                    <Button
                        android:id="@+id/button_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customlayout_button_main"
                        tools:text="@string/add_member"
                        android:textColor="@color/white" />
                    <Button
                        android:id="@+id/button_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customlayout_button_main"
                        android:text="@string/delete_member"
                        android:layout_marginStart="10sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>