<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_manage_cost"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        android:layout_marginTop="20sp"
        android:orientation="vertical">


        <ScrollView
            android:id="@+id/scrollView_signUpInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/graysboro"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView_title">
                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_month"
                    app:textView_title="@string/month"
                    app:editText_content_hint="@string/month"
                    app:editText_input_number="true"
                    />
                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_cost"
                    app:textView_title="@string/cost"
                    app:editText_content_hint="@string/cost"
                    app:editText_input_number="true"
                    />
                <com.youngs.mygym.common.customlayout.CustomlayoutEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customlayout_remark"
                    app:textView_title="@string/month"
                    app:editText_content_hint="@string/remark"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30sp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <Button
                        android:id="@+id/button_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customlayout_button_main"
                        android:text="@string/save"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customlayout_button_main"
                        android:layout_marginStart="10sp"
                        android:text="@string/delete"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>