<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youngs.mygym.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"
            />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1">
            <com.youngs.mygym.common.customlayout.CustomlayoutEmployee
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:id="@+id/menu_manage_member"
                android:background="#f8f9fa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/menu_manage_member"/>

            <com.youngs.mygym.common.customlayout.CustomlayoutEmployee
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_manage_cost"
                android:layout_columnWeight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/menu_manage_cost"/>
            <com.youngs.mygym.common.customlayout.CustomlayoutEmployee
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="#f8f9fa"
                android:id="@+id/menu_setting"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/menu_setting"/>


        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>