<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mygym.MainActivity">

    <EditText
        android:id="@+id/userid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_id"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userid" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_checkbox"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_SaveLoginInfo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveLoginInfo"
            android:text="@string/auto_login"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:id="@+id/checkbox_AutoLogin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_AutoLogin"
            android:text="자동 로그인"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_Button"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_checkbox">

        <Button
            android:id="@+id/button_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customlayout_button_main"
            android:textColor="@color/white"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:enabled="true"
            android:text="@string/action_sign_in"
            />

        <!--        <View-->
        <!--            android:layout_width="1dp"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:layout_weight="1"/>-->


        <Button
            android:id="@+id/button_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/customlayout_button_sub"
            android:textColor="@color/little_light_black"
            android:text="@string/action_sign_up"/>

        <Button
            android:id="@+id/button_KakaoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/kakao_login"
            android:background="@drawable/customlayout_button_main"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_ForgotLoginInfo"
        android:layout_marginTop="30dp"
        android:weightSum="5"
        android:gravity="right"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Button">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_findUserInformation"
            android:gravity="center"
            android:text="@string/forgot_password"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appVersion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="5dp"
        tools:text="ver 1.0.0"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>